--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,3 +3,7 @@ builder = "nixpacks"
 
 [deploy]
 startCommand = "npm start"
+healthcheckPath = "/api/health"
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 3
