--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "db:migrate": "node src/models/index.js"
+    "dev": "nodemon src/server.js"
   },
   "engines": {
     "node": "18.x"
@@ -26,10 +24,5 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
     "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
   }
 }
